--- a/style.css
+++ b/style.css
@@ -5,31 +5,9 @@ body {
     flex-direction: column;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
 .main-container {
     height: 83vh;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 .footer-container {
@@ -51,57 +29,6 @@ body {
 
 
 
-
-
-.navbar {
-    display: flex;
-    background-color: #ffffff;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    height: 100px;
-}
-
-.nav-container {
-    justify-content: space-around;
-}
-
-.navbar ul {
-    display: flex;
-    list-style-type: none;
-    row-gap: 20px;
-    transition: all .2s linear;
-}
-
-.nav-marker {
-    height: 2px;
-    width: 30px;
-    background: red;
-    transform: translateY(20px);
-    position: absolute;
-    transition: all .4s ease-in-out;
-    border-radius: 10px;
-}
-
-.navbar ul a {
-    text-decoration: none;
-    margin: 0 15px;
-    color: rgb(0, 0, 0);
-    font-family: 'Kalam', cursive;
-    font-size: 20px;
-    position: relative;
-}
-
-.navbar ul a:hover::before,
-.navbar ul a:focus {
-    color: red;
-    opacity: 1;
-}
-
-.navbar ul a:focus::before {
-    opacity: 1;
-}
 
 
 
@@ -187,6 +114,7 @@ body {
     justify-content: space-evenly;
     font-size: 30px;
     transition: all .4s ease-in-out;
+    z-index: 1;
 }
 
 .social-media-icons i {
@@ -441,6 +369,8 @@ input::placeholder {
 
 
 
+
+
 #resume-container.live {
     display: grid;
     grid-template-columns: 12.5% 30% 15% 30% 12.5%;
@@ -461,7 +391,7 @@ input::placeholder {
 }
 
 .resume-dropdown-container {
-    background: rgb(231, 186, 82);
+    background: #f7f3e8;
     width: 300px;
     height: 30px;
     padding-left: 12px;
@@ -524,12 +454,16 @@ input::placeholder {
 
 
 
-
-
-
-
-#photos-container.live {
+#media-container.live {
     display: flex;
+
+}
+
+#logged-out-restriction {
+    height: 150%;
+    width: 100%;
+    background: rgba(0, 0, 0, .3);
+    position: absolute;
 }
 
 
@@ -545,9 +479,9 @@ input::placeholder {
 
 
 
-#posters-container.live {
-    display: flex;
-}
+
+
+
 
 
 
@@ -573,8 +507,8 @@ input::placeholder {
     background: rgb(231, 186, 82);
     border-radius: 5px;
     margin: 10px;
+    margin-bottom: 40px;
     padding: 10px;
-
     width: 80%;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, .3);
 }
@@ -592,21 +526,33 @@ input::placeholder {
 
 }
 
+.blog-post h2 {
 
 
-
-
-
-
-
-
-
-
-
-
-#reels-container.live {
-    display: flex;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    font-family: 'Kalam', cursive;
+    font-size: 40px;
 }
+
+.blog-post p {
+    background: lightgrey;
+    padding-bottom: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -627,6 +573,19 @@ input::placeholder {
 
 #members-container.live {
     display: flex;
+}
+
+#members-container button {
+    background: orange;
+    border-radius: 5px;
+    letter-spacing: 2px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, .3);
+    height: fit-content;
+    padding: 10px;
+}
+
+#members-container button:hover {
+    background-color: red;
 }
 
 
@@ -688,16 +647,21 @@ input::placeholder {
         box-shadow: -2px 8px 8px rgba(0, 0, 0, 0.3);
         transition-delay: all .3s linear;
     }
-}
 
-@media (max-width: 1400px) {
     .nav-links ul {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         transition: all .4s ease-in-out;
     }
+
+    .navbar {
+        display: flex;
+        display: space-around;
+    }
 }
+
+
 
 @media (max-width: 820px) {
 
