--- a/css/mediaContainer.css
+++ b/css/mediaContainer.css
@@ -1,3 +1,113 @@
 #media-container.live {
     display: flex;
 }
+
+.media-container {
+    width: 100%;
+    height: 100vh;
+    background: rgb(244, 213, 169);
+    display: grid;
+    grid-template-columns: 20% 80%;
+    justify-items: center;
+}
+
+.media-controls-container {
+    background: rgb(249, 199, 160);
+    margin: 10px;
+    height: fit-content;
+    width: fit-content;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, .3);
+}
+
+.media-controls-container h2 {
+    margin-top: 0;
+}
+
+.media-content-container {
+    background: rgb(232, 242, 245);
+    margin: 10px;
+    height: fit-content;
+    width: 70%;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, .3);
+}
+
+.media-search-input {
+    display: flex;
+    align-content: space-around;
+    justify-content: center;
+}
+
+
+.media-search-input input {
+    height: 25px;
+    width: 400px;
+    margin-bottom: 5px;
+}
+
+.media-search-button {
+    background: rgb(98, 188, 98);
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    padding: 5px;
+    margin-left: 5px;
+    font-size: 10px;
+
+}
+
+.media-container-category-buttons {
+    display: flex;
+    padding-bottom: 20px;
+}
+
+.media-container-category-buttons div {
+    background: white;
+    width: 100%;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin: 5px;
+    text-align: center;
+}
+
+.media-container-category-buttons div:hover {
+    background: lightgreen;
+    cursor: pointer;
+}
+
+.media-container-category-buttons div:focus {
+    background: lightgreen;
+}
+
+.media-photos-container {
+    line-height: 0;
+    -webkit-column-count: 5;
+    -webkit-column-gap: 0px;
+    -moz-column-count: 5;
+    -moz-column-gap: 0px;
+    column-count: 5;
+    column-gap: 15px;
+    margin: auto;
+}
+
+.media-photos-container img {
+    width: 100% !important;
+    height: auto !important;
+    margin-bottom: 15px;
+    border: 2px solid black;
+    box-shadow: 2px 4px 4px rgba(0, 0, 0, .3);
+}
+
+.media-photos-container img:hover {
+    transform: scale(1.01);
+    cursor: pointer;
+}
+
+.media-photos-container {
+    display: inline-block;
+    margin-right: auto;
+    margin-left: auto;
+}
