--- a/css/navbar.css
+++ b/css/navbar.css
@@ -6,6 +6,8 @@
     align-items: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     height: 100px;
+    position: fixed;
+    z-index: 5;
 }
 
 .nav-container {
